fixed index not wrapping resume-me

--- a/style.css
+++ b/style.css
@@ -399,13 +399,12 @@ p{
 
 .resume-me{
 	display: flex;
-	flex-flow: row nowrap;
+	flex-flow: row wrap;
+	gap: 2em;
 }
 
 .resume-me-picture{
-	flex-basis: 30%;
-	max-width: 100%;
-	margin-right: 2em;
+	flex-basis: 35%;
 }
 
 .resume-me-text{
@@ -421,12 +420,12 @@ p{
 	justify-content: center;
 	align-items: flex-start;
 	/* text-align: left; */
-	align-self: center;
 	background-color: #f0ece3;
 	padding: 0em 2vw;
+	margin-right: 1vw;
 	margin-bottom: 1vh;
 	margin-left: 0%;
-	max-width: 80%;
+	max-width: 100%;
 }
 
 .resume-education{
@@ -489,8 +488,7 @@ p{
 .timeline{
 	position: relative;
 	top: 0px;
-	margin: auto;
-	/* flex-basis: 40%; */
+	margin-bottom: auto;
 }
 
 .timeline::after { /*line*/
@@ -585,16 +583,9 @@ p{
 	/* .resume-container1{ */
 		/* margin-left: 0vw; */
 	/* } */
-	.resume-container1{
-		margin-left: 10%;
-	}
 	.resume-content{
 		flex-flow: row wrap;
 	}
-	.resume-skills{
-		padding: 0em 0em;
-	}
-	
 	.info-image{
 		flex-basis: 100%;
 	}
@@ -616,6 +607,11 @@ p{
 }
 
 @media screen and (max-width: 700px){
+	.resume-info{
+		flex-basis: 100%;
+	}
+	
+	
 	.resume-me-picture{
 		flex-basis: 100%;
 	}
